--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="container header-container">
         <div class="logo-navlinks">
           <a class="logo" href="./index.html"
             ><span class="logo-accent">WEB</span>STUDIO</a
@@ -82,52 +82,60 @@
               <a href="./portfolio.html">
                 <img
                   class="portfolio-img"
-                  src="./images/portfolio-img.jpg"
+                  src="./images/portfolio-img-8.jpg"
                   alt="Banking App Interface Concept"
                   width="360"
                   height="300"
                 />
-                <h2 class="subtitle">Banking App Interface Concept</h2>
-                <p class="text">App</p>
+                <div class="portfolio-overlay">
+                  <h2 class="subtitle">Banking App Interface Concept</h2>
+                  <p class="text">App</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
               <a href="./portfolio.html">
                 <img
                   class="portfolio-img"
-                  src="./images/portfolio-img-1.jpg"
+                  src="./images/portfolio-img-7.jpg"
                   alt="Cashless Payment"
                   width="360"
                   height="300"
                 />
-                <h2 class="subtitle">Cashless Payment</h2>
-                <p class="text">Marketing</p>
+                <div class="portfolio-overlay">
+                  <h2 class="subtitle">Cashless Payment</h2>
+                  <p class="text">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
               <a href="./portfolio.html">
                 <img
                   class="portfolio-img"
-                  src="./images/portfolio-img-2.jpg"
+                  src="./images/portfolio-img-6.jpg"
                   alt="Meditation App"
                   width="360"
                   height="300"
                 />
-                <h2 class="subtitle">Meditation App</h2>
-                <p class="text">App</p>
+                <div class="portfolio-overlay">
+                  <h2 class="subtitle">Meditation App</h2>
+                  <p class="text">App</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
               <a href="./portfolio.html">
                 <img
                   class="portfolio-img"
-                  src="./images/portfolio-img-3.jpg"
+                  src="./images/portfolio-img-5.jpg"
                   alt="Taxi Service"
                   width="360"
                   height="300"
                 />
-                <h2 class="subtitle">Taxi Service</h2>
-                <p class="text">Marketing</p>
+                <div class="portfolio-overlay">
+                  <h2 class="subtitle">Taxi Service</h2>
+                  <p class="text">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
@@ -139,60 +147,70 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="subtitle">Screen Illustrations</h2>
-                <p class="text">Design</p>
+                <div class="portfolio-overlay">
+                  <h2 class="subtitle">Screen Illustrations</h2>
+                  <p class="text">Design</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
               <a href="./portfolio.html">
                 <img
                   class="portfolio-img"
-                  src="./images/portfolio-img-5.jpg"
+                  src="./images/portfolio-img-3.jpg"
                   alt="Online Courses"
                   width="360"
                   height="300"
                 />
-                <h2 class="subtitle">Online Courses</h2>
-                <p class="text">Marketing</p>
+                <div class="portfolio-overlay">
+                  <h2 class="subtitle">Online Courses</h2>
+                  <p class="text">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
               <a href="./portfolio.html">
                 <img
                   class="portfolio-img"
-                  src="./images/portfolio-img-6.jpg"
+                  src="./images/portfolio-img-2.jpg"
                   alt="Instagram Stories Concept"
                   width="360"
                   height="300"
                 />
-                <h2 class="subtitle">Instagram Stories Concept</h2>
-                <p class="text">Design</p>
+                <div class="portfolio-overlay">
+                  <h2 class="subtitle">Instagram Stories Concept</h2>
+                  <p class="text">Design</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
               <a href="./portfolio.html">
                 <img
                   class="portfolio-img"
-                  src="./images/portfolio-img-7.jpg"
+                  src="./images/portfolio-img-1.jpg"
                   alt="Organic Food"
                   width="360"
                   height="300"
                 />
-                <h2 class="subtitle">Organic Food</h2>
-                <p class="text">Web Site</p>
+                <div class="portfolio-overlay">
+                  <h2 class="subtitle">Organic Food</h2>
+                  <p class="text">Web Site</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
               <a href="./portfolio.html">
                 <img
                   class="portfolio-img"
-                  src="./images/portfolio-img-8.jpg"
+                  src="./images/portfolio-img.jpg"
                   alt="Fresh Coffee"
                   width="360"
                   height="300"
                 />
-                <h2 class="subtitle">Fresh Coffee</h2>
-                <p class="text">Web Site</p>
+                <div class="portfolio-overlay">
+                  <h2 class="subtitle">Fresh Coffee</h2>
+                  <p class="text">Web Site</p>
+                </div>
               </a>
             </li>
           </ul>
@@ -204,7 +222,7 @@
         <a class="footer-logo" href="./index.html"
           ><span class="logo-accent">WEB</span>STUDIO</a
         >
-        <p class="footer-text">
+        <p class="text footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
